// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/onexstack/onex.
//

syntax = "proto3";

package cacheserver.v1;

import "google/protobuf/empty.proto";
import "cacheserver/v1/namespaced.proto";
import "cacheserver/v1/secret.proto";

option go_package = "github.com/onexstack/onex/pkg/api/cacheserver/v1;v1";

service CacheServer {
  rpc Set(SetRequest) returns (google.protobuf.Empty) {}
  rpc Del(DelRequest) returns (google.protobuf.Empty) {}
  rpc Get(GetRequest) returns (GetResponse) {}

  rpc SetSecret(SetSecretRequest) returns (google.protobuf.Empty) {}
  rpc DelSecret(DelSecretRequest) returns (google.protobuf.Empty) {}
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
}
