// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/onexstack/onex.
//

syntax = "proto3";

package cacheserver.v1; // 告诉编译器此文件使用什么版本的语法

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/onexstack/onex/pkg/api/cacheserver/v1;v1";

message SetRequest {
  string namespace = 1;
  string key = 2;
  google.protobuf.Any value = 3;
  optional google.protobuf.Duration expire = 4;
}

message DelRequest {
  string namespace = 1;
  string key = 2;
}

message GetRequest {
  string namespace = 1;
  string key = 2;
}

message GetResponse {
  google.protobuf.Any value = 1;
  google.protobuf.Duration expire = 2;
}
